--- a/about.css
+++ b/about.css
@@ -1,3 +1,4 @@
+
 *{
     padding: 0;
     margin: 0;
@@ -6,8 +7,9 @@
 }
 .background{
     height: 100vh;
-    background: radial-gradient(#f1e1c2,#fcbc98);
+    background: radial-gradient(#f1e1c2,#ff8e4d);
 }
+
 .max{
     max-width: 1200px;
     margin: auto;
@@ -36,55 +38,29 @@
 .navbar ul li a:hover{
     border-bottom: 2px solid black;
 }
-.welcome{
-    margin-top: 10px;
-    height: 80%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-.left{
-    padding: 40px;
-    flex-basis: 50%;
-    display: flex;
-    flex-direction: column;
-}
-.left h2{
-    margin-bottom: 20px;
-}
-.left h1{
-    font-size: 50px;
-    margin-bottom: 20px;
-}
-.right{
-    flex-basis: 50%;
-    display: flex;
-}
-.login{
-    margin-top: 20px;
-    padding: 10px 20px;
-    width: 150px;
-    background: orange;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-    box-shadow: 0px 2px 7px 1px;
-    font-size: 15px;
-}
-.login:hover{
-    transform: translateY(-2px);
-}
-.btn{
-    width: 100%;
-    display: flex;
-}
-.margin{
-    margin-left: 20px;
+
+.heading h1 {
+    font-size: 80px;
+    color: #9c5906
 }
 
-/* footer */
+.description {
+    padding: 1%;
+    font-size: 30px;
+    font-family: Arial, Helvetica, sans-serif;
+    margin-top: 50px;
+    margin-left:  400px;
+    margin-right: 400px;
+    background-color: #fff;
+    height: 470px;
+    border-radius: 30px;
+    box-shadow: 0px 2px 7px 1px;;
+    
+}
 
+/*footer*/
 .back{
+   
     background: black;
 }
 .footer{
