added media querry

--- a/about.css
+++ b/about.css
@@ -1,100 +1,165 @@
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  font-family: Arial, Helvetica, sans-serif;
+}
+.background {
+  height: 100vh;
+  background: radial-gradient(#f1e1c2, #ff8e4d);
+}
 
-*{
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-    font-family: Arial, Helvetica, sans-serif;
+.max {
+  max-width: 1200px;
+  margin: auto;
 }
-.background{
-    height: 100vh;
-    background: radial-gradient(#f1e1c2,#ff8e4d);
+.nav {
+  display: flex;
+  align-items: center;
+  padding: 10px 40px;
 }
-
-.max{
-    max-width: 1200px;
-    margin: auto;
+.navbar {
+  flex: 1;
 }
-.nav{
-    display: flex;
-    align-items: center;
-    padding: 10px 40px;
+.navbar ul {
+  text-align: right;
+  list-style: none;
 }
-.navbar{
-    flex: 1;
+.navbar ul li {
+  display: inline-block;
+  margin-right: 20px;
 }
-.navbar ul{
-    text-align: right;
-    list-style: none;
+.navbar ul li a {
+  text-decoration: none;
+  color: black;
+  transition: border-bottom 0.1s ease-in-out;
 }
-.navbar ul li{
-    display: inline-block;
-    margin-right:20px;
-}
-.navbar ul li a{
-    text-decoration: none;
-    color: black;
-    transition: border-bottom 0.1s ease-in-out;
-}
-.navbar ul li a:hover{
-    border-bottom: 2px solid black;
+.navbar ul li a:hover {
+  border-bottom: 2px solid black;
 }
 
 .heading h1 {
-    font-size: 80px;
-    color: #9c5906
+  font-size: 80px;
+  color: #9c5906;
 }
-
+.outer-box {
+  position: relative;
+}
 .description {
-    padding: 1%;
-    font-size: 30px;
-    font-family: Arial, Helvetica, sans-serif;
-    margin-top: 50px;
-    margin-left:  400px;
-    margin-right: 400px;
-    background-color: #fff;
-    height: 470px;
-    border-radius: 30px;
-    box-shadow: 0px 2px 7px 1px;;
-    
+  height: 500px;
+  width: 500px;
+  background: #fff;
+  position: absolute;
+  border-radius: 30px;
+  box-shadow: 0px 2px 7px 1px;
+  align-items: center;
+  font-size: 1.5rem;
+  
+ 
+  
+  left: 50%;
+  
+  transform: translate(-50%, 0);
+  
+  padding: 1%;
 }
 
 /*footer*/
-.back{
-   
-    background: black;
+.back {
+  background: black;
 }
-.footer{
-    display: flex;
-    padding: 20px;
+.footer {
+  display: flex;
+  padding: 20px;
 }
-.col{
-    flex-basis: 50%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    text-align: center;
+.col {
+  flex-basis: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  text-align: center;
 }
-.col p{
-    padding: 20px 80px;
-    color: grey;
+.col p {
+  padding: 20px 80px;
+  color: grey;
 }
-.col ul{
-    list-style: none;
+.col ul {
+  list-style: none;
 }
-.col ul li{
-    margin-bottom: 10px;
+.col ul li {
+  margin-bottom: 10px;
 }
-.col ul li a{
-    text-decoration: none;
-    color: white;
-    padding: 5px;
+.col ul li a {
+  text-decoration: none;
+  color: white;
+  padding: 5px;
 }
-.col ul li a:hover{
-    text-decoration: underline;
+.col ul li a:hover {
+  text-decoration: underline;
 }
-.copy{
-    padding: 20px;
-    text-align: center;
-    color: grey;
+.copy {
+  padding: 20px;
+  text-align: center;
+  color: grey;
+}
+
+
+@media  screen and (max-width: 500px) {
+    .description {
+        font-size: 20px;
+        height: 400px;
+        width: 90%;
+    }
+    .heading h1 {
+        font-size: 60px;
+        color: #9c5906;
+      }
+}
+
+@media  screen and (max-width: 450px) {
+    .description {
+        font-size: 18px;
+        height: 360px;
+        width: 90%;
+    }
+    .heading h1 {
+        font-size: 55px;
+        color: #9c5906;
+      }
+}
+
+@media  screen and (max-width: 400px) {
+    .description {
+        font-size: 16px;
+        height: 300px;
+        width: 90%;
+    }
+    .heading h1 {
+        font-size: 50px;
+        color: #9c5906;
+      }
+}
+@media  screen and (max-width: 350px) {
+    .description {
+        font-size: 12px;
+        height: 200px;
+        width: 90%;
+    }
+    .heading h1 {
+        font-size: 45px;
+        color: #9c5906;
+      }
+}
+
+@media  screen and (max-width: 300px) {
+    .description {
+        font-size: 8px;
+        height: 400px;
+        width: 90%;
+    }
+    .heading h1 {
+        font-size: 40px;
+        color: #9c5906;
+      }
 }
