--- a/about.css
+++ b/about.css
@@ -71,6 +71,7 @@
 .footer {
   display: flex;
   padding: 20px;
+  flex-wrap: wrap;
 }
 .col {
   flex-basis: 50%;
@@ -79,6 +80,7 @@
   align-items: center;
   flex-direction: column;
   text-align: center;
+  flex-basis: 100%;
 }
 .col p {
   padding: 20px 80px;
@@ -94,6 +96,7 @@
   text-decoration: none;
   color: white;
   padding: 5px;
+  text-align: center;
 }
 .col ul li a:hover {
   text-decoration: underline;
